# Bank-Offer-Feed-Ranking

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package.json  pyproject.toml
.github/workflows/: backend-ci.yml  frontend-ci.yml  ml-ci.yml
agent/: DECISIONS.md  OPEN_QUESTIONS.md  PROGRESS.md  README.md
backend/: README.md
backend/app/: main.py
backend/tests/: test_backend_placeholder.py  test_feedback_api.py  test_health.py  test_model_loader.py  test_rank_api.py
docs/: install-aws.md  install-local.md  model_card.md  runbook.md
docs/adr/: 0001-model-choice.md  0002-feedback-storage.md  0003-react-spa.md  0004-llm-deferral.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: App.test.tsx  api_helpers.test.ts  integration.test.ts  placeholder.test.ts
infra/: README.md
infra/scripts/: post-terraform-deploy.sh
infra/terraform/: .gitignore  README.md  apigateway.tf  cloudfront.tf  data.tf  ecr.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
ml/: README.md
ml/data/: __init__.py  eligibility.py  labels.py  loaders.py  offers.py  pairs.py  preprocess.py  run_pipeline.py  run_synthetic.py  sample_users.py  validation.py
ml/evaluation/: evaluate.py
ml/features/: __init__.py  builder.py
ml/tests/: test_data_pipeline.py  test_evaluation.py  test_features.py  test_ml_placeholder.py  test_synthetic.py  test_training.py
ml/training/: run_pipeline.py  split.py  train.py
scripts/: check_ml_artifacts.py  quality.sh
shared/: README.md
shared/contracts/: bank_data_schema.json  offer_schema.json  (+1 more)
specs/: design.md  requirements.md
(+25 files in other folders)
