[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-offer-feed-ranking"
version = "1.0.0"
description = "Production-aligned ML system to rank personalized bank offers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "pyarrow>=15.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["backend", "ml", "shared"]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["backend", "ml", "shared"]

[tool.mypy]
python_version = "3.11"
files = ["backend/app"]
mypy_path = "backend"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "ml/tests", "shared/tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
